--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
 
-
 :root {
   --green: #47a8e5;
   --black: #444;
@@ -9,15 +8,15 @@
   --text-shadow: 0.4rem 0.4rem 0 rgba(0, 0, 0, 0.2);
   --border: 0.2rem solid var(--green);
 }
-.image{
-  transition: transform 0.3s;  /* Add a smooth transition effect */
+.image {
+  transition: transform 0.3s; /* Add a smooth transition effect */
 }
 
 .image:hover {
-  transform: scale(1.03);  /* Enlarge the image on hover */
+  transform: scale(1.03); /* Enlarge the image on hover */
 }
-.icons i{
-      color:white;
+.icons i {
+  color: white;
 }
 
 * {
@@ -46,6 +45,13 @@ section {
 section:nth-child(even) {
   background: #f5f5f5;
 }
+/* Define the active link style */
+/* Define the active link style */
+.nav-link.active {
+  color: white; /* Change the text color to white */
+  font-weight: bold; /* You can add additional styles as needed */
+}
+
 
 .heading {
   text-align: center;
@@ -88,7 +94,7 @@ section:nth-child(even) {
   align-items: center;
   justify-content: space-between;
   background: #47a8e5;
-  color:white;
+  color: white;
 }
 
 .header .logo {
@@ -155,14 +161,14 @@ section:nth-child(even) {
   padding: 1rem 0;
   text-align: justify;
 }
-.content p{
-       text-align: justify;
-       width:bold;
-       font-size: 15px;
-       word-spacing:1.5;
+.content p {
+  text-align: justify;
+  width: bold;
+  font-size: 15px;
+  word-spacing: 1.5;
 }
-.icons{
-      border-color: #444;
+.icons {
+  border-color: #444;
 }
 
 .icons-container {
@@ -191,14 +197,14 @@ section:nth-child(even) {
 
 .icons-container .icons h3 {
   font-size: 4.5rem;
-  color:white;
+  color: white;
   padding: 0.5rem 0;
   text-shadow: var(--text-shadow);
 }
 
 .icons-container .icons p {
   font-size: 1.7rem;
-  color: white;;
+  color: white;
 }
 
 .about .row {
@@ -249,7 +255,7 @@ section:nth-child(even) {
 }
 
 .services .box-container .box i {
-  color:white;
+  color: white;
   font-size: 5rem;
   padding-bottom: 0.5rem;
 }
@@ -265,12 +271,12 @@ section:nth-child(even) {
   font-size: 1.4rem;
   line-height: 2;
 }
-.doctors p{
-        text-align: justify;
-         font-size:15px;
-         width: bold;
-         color:#444;
-         line-height: 1.8;
+.doctors p {
+  text-align: justify;
+  font-size: 15px;
+  width: bold;
+  color: #444;
+  line-height: 1.8;
 }
 
 .doctors .box-container {
@@ -278,8 +284,8 @@ section:nth-child(even) {
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 2rem;
 }
-.about  b{
-       color:#444;
+.about b {
+  color: #444;
 }
 
 .doctors .box-container .box {
@@ -319,20 +325,18 @@ footer {
   max-width: 1200px;
   margin: 0 auto;
   font-size: 15px;
-
-
 }
-.footer footer-content a:hover{
-        color:#444;
-        width:bold;
+.footer footer-content a:hover {
+  color: #444;
+  max-width: bold;
 }
-.footer a:hover{
-          color:#444;
-          width:bold;
-          transition:0.3 sec;
+.footer a:hover {
+  color: #444;
+  max-width: bold;
+  transition: 0.3 sec;
 }
 .footer-logo img {
-  width: 100px;
+  max-width: 100px;
 }
 
 .footer-links ul {
@@ -348,7 +352,7 @@ footer {
   text-decoration: none;
   color: #444;
   font-size: 15px;
-  width:bold;
+  width: bold;
 }
 
 .footer-contact p {
@@ -366,7 +370,7 @@ footer {
 }
 
 .footer-social img {
-  width: 20px;
+  max-width: 20px;
 }
 /* styles.css */
 body {
@@ -397,6 +401,10 @@ body {
 .review:last-child {
   margin-right: 0;
 }
+#user-greeting {
+  font-size: 20px;
+  color: #222; /* Blue color, you can change this */
+}
 
 .reviewer-info {
   display: flex;
@@ -405,8 +413,8 @@ body {
 }
 
 .reviewer-info img {
-  width: 40px;
-  height: 40px;
+  max-width: 40px;
+  min-height: 40px;
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -421,100 +429,99 @@ body {
   transform: translateY(-5px);
 }
 
-        
-                /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"); */
-        
-                body {
-                    font-family: "Poppins", sans-serif;
-                    /* background-color: #f3f3f3; */
-                    margin: 0;
-                    padding: 0;
-                    border-color: #47a8e5;
-                    padding:20px;
-                }
-                span{
-                     color: #47a8e5;
-                }
-                
-                .container {
-                    width: 90%;
-                    /* background-color: #f3f3f3; */
-        
-                    max-width: 600px;
-                    margin: 0 auto;
-                    padding: 20px;
-                    background-color: #fff;
-                    /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); */
-                    border-radius: 5px;
-                }
-        
-                h1 {
-                    font-size: 28px;
-                    color: #333;
-        
-                    text-align: center;
-                }
-        
-                label {
-                    display: block;
-                    font-weight: bold;
-                    margin-top: 15px;
-                }
-                select{
-                    width:49.5%;
-                    padding:10px;
-                    border-radius: 5px;
-                    margin-top: 5px;
-                    border-color: #47a8e5;
-                }
-                input {
-                    width: 48%;
-                    padding: 10px;
-                    border: 1px solid #ccc;
-                    border-radius: 5px;
-                    margin-top: 5px;
-                    border-color: #47a8e5;
-                }
-        
-                button {
-                    width: 50%;
-                    padding: 10px;
-                    background: #47a8e5;
-                    color: #fff;
-                    border: none;
-                    border-radius: 5px;
-                    cursor: pointer;
-                    margin-top: 20px;
-                }
-        
-                button:hover {
-                    background: darkblue;
-                }
-        
-                .confirmation {
-                    display: none;
-                    margin-top: 20px;
-                }
-        
-                .confirmation h2 {
-                    font-size: 24px;
-                    color: #333;
-                    margin-bottom: 10px;
-                }
-        
-                .confirmation p {
-                    font-size: 18px;
-                    margin-top: 5px;
-                }
-        
-                .button-group {
-                    display: flex;
-                    justify-content: space-between;
-                }
-        
-                .button-group button {
-                    padding: 10px;
-                }
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"); */
+
+body {
+  font-family: "Poppins", sans-serif;
+  /* background-color: #f3f3f3; */
+  margin: 0;
+  padding: 0;
+  border-color: #47a8e5;
+  padding: 20px;
+}
+span {
+  color: #47a8e5;
+}
+
+.container {
+  width: 90%;
+  /* background-color: #f3f3f3; */
+
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); */
+  border-radius: 5px;
+}
+
+h1 {
+  font-size: 28px;
+  color: #333;
+
+  text-align: center;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-top: 15px;
+}
+select {
+  width: 49.5%;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 5px;
+  border-color: #47a8e5;
+}
+input {
+  width: 48%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin-top: 5px;
+  border-color: #47a8e5;
+}
+
+button {
+  width: 50%;
+  padding: 10px;
+  background: #47a8e5;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+button:hover {
+  background: darkblue;
+}
+
+.confirmation {
+  display: none;
+  margin-top: 20px;
+}
+
+.confirmation h2 {
+  font-size: 24px;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.confirmation p {
+  font-size: 18px;
+  margin-top: 5px;
+}
+
+.button-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button-group button {
+  padding: 10px;
+}
 /* media queries  */
 @media (max-width: 991px) {
   html {
@@ -524,6 +531,7 @@ body {
   .header {
     padding: 2rem;
   }
+
 
   section {
     padding: 2rem;
@@ -562,9 +570,104 @@ body {
     margin: 2.5rem;
   }
 }
+/* Styles for mobile menu, initially hidden */
+.mobile-menu {
+  display: none;
+  background-color: #47a8e5;
+  color: #fff;
+  text-decoration: none;
+  text-align: center;
+  position:fixed;
+  padding-right:150px;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  padding: 10px 0;
+}
+
+/* Media query for screens smaller than 768px (typical for mobile devices) */
+@media (max-width: 768px) {
+  .navbar {
+      display: none; /* Hide the desktop menu */
+  }
+
+  .mobile-menu {
+      display: block; /* Display the mobile menu */
+  }
+}
 
 @media (max-width: 450px) {
   html {
     font-size: 50%;
   }
 }
+  @media (min-width: 319px) and (max-width: 480px) {
+ 
+     .rev{
+        max-width:100%;
+        padding:0 0.5em;
+     }
+     .reviews{
+         max-width:150%;
+         text-align: justify;
+
+     }    
+     .review{
+       max-width:31%;
+       text-align: justify;
+     }
+     h3{
+           text-align:justify;
+     }
+     image{
+            display:block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50px;
+            padding:0 1rem;
+     }
+     p{
+        text-align:center;
+        /* padding:0 1em; */
+        line-height:0.5;
+        text-shadow: #444;
+     }
+     .section{
+      padding:1rem;
+     }
+     .footer{
+       padding:1em;
+     }
+
+
+  }
+  @media (min-width: 481px) and (max-width: 1200px) {
+    .rev{
+       max-width:100%;
+    }
+    .reviews{
+        max-width:150%;
+    }    
+    .review{
+      max-width:31%;
+    }
+    h3{
+          text-align:justify;
+    }
+ 
+    p{
+       text-align:justify;
+       padding:0 2em;
+       line-height:0.5;
+    }
+ }
+ /* Media query for screens smaller than 768px (typical for mobile devices) */
+@media (max-width: 768px) {
+  .footer {
+    position: relative; /* Ensure the footer is visible even on small screens */
+  }
+}
+
+/* Media query for screens larger than 768px (typical for laptops and desktops) */
+
+
